Finalizando filtros, README.md, LICENSE e documentação com Swagger
